# sms-backup-and-restore-exporter

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  backup_extractor.py  pyproject.toml  requirements.txt  runtime.txt
src/: __init__.py  call_log_generator.py  contacts_vcard_extractor.py  mms_media_extractor.py  xml_backup_exporter.py
tests/: __init__.py  conftest.py  test_backup_extractor.py  test_call_log_generator.py  test_mms_media_extractor.py  test_vcf_field_parser.py  test_xml_backup_exporter.py
tuesday/tuesday/: settings.py
