[project]
name = "sms-backup-restore-extractor"
version = "2.0.0"
description = "Extract media files, call logs, or vcf/vCard media from SMS Backup & Restore backup archives"
readme = "README.md"
requires-python = ">=3.8,<3.15"
dependencies = [
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "idna>=3.10",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
]

[project.scripts]
backup-extractor = "src.backup_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
